// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div>
  <SQScanner
    os="win"
  />
  <h4
    className="huge-spacer-top spacer-bottom"
  >
    onboarding.analysis.sq_scanner.execute
  </h4>
  <InstanceMessage
    message="onboarding.analysis.sq_scanner.execute.text"
  >
    <Component />
  </InstanceMessage>
  <CodeSnippet
    isOneLine={true}
    snippet={
      Array [
        "sonar-scanner.bat",
        "-D\\"sonar.projectKey=projectKey\\"",
        undefined,
        "-D\\"sonar.sources=.\\"",
        "-D\\"sonar.host.url=host\\"",
        "-D\\"sonar.login=token\\"",
      ]
    }
  />
  <p
    className="big-spacer-top markdown"
  >
    <FormattedMessage
      defaultMessage="onboarding.analysis.sq_scanner.docs"
      id="onboarding.analysis.sq_scanner.docs"
      values={
        Object {
          "link": <a
            href="http://redirect.sonarsource.com/doc/install-configure-scanner.html"
            rel="noopener noreferrer"
            target="_blank"
          >
            onboarding.analysis.sq_scanner.docs_link
          </a>,
        }
      }
    />
  </p>
</div>
`;

exports[`renders correctly 2`] = `
<div>
  <SQScanner
    os="linux"
  />
  <h4
    className="huge-spacer-top spacer-bottom"
  >
    onboarding.analysis.sq_scanner.execute
  </h4>
  <InstanceMessage
    message="onboarding.analysis.sq_scanner.execute.text"
  >
    <Component />
  </InstanceMessage>
  <CodeSnippet
    isOneLine={false}
    snippet={
      Array [
        "sonar-scanner",
        "-Dsonar.projectKey=projectKey",
        undefined,
        "-Dsonar.sources=.",
        "-Dsonar.host.url=host",
        "-Dsonar.login=token",
      ]
    }
  />
  <p
    className="big-spacer-top markdown"
  >
    <FormattedMessage
      defaultMessage="onboarding.analysis.sq_scanner.docs"
      id="onboarding.analysis.sq_scanner.docs"
      values={
        Object {
          "link": <a
            href="http://redirect.sonarsource.com/doc/install-configure-scanner.html"
            rel="noopener noreferrer"
            target="_blank"
          >
            onboarding.analysis.sq_scanner.docs_link
          </a>,
        }
      }
    />
  </p>
</div>
`;

exports[`renders correctly 3`] = `
<div>
  <SQScanner
    os="linux"
  />
  <h4
    className="huge-spacer-top spacer-bottom"
  >
    onboarding.analysis.sq_scanner.execute
  </h4>
  <InstanceMessage
    message="onboarding.analysis.sq_scanner.execute.text"
  >
    <Component />
  </InstanceMessage>
  <CodeSnippet
    isOneLine={false}
    snippet={
      Array [
        "sonar-scanner",
        "-Dsonar.projectKey=projectKey",
        undefined,
        "-Dsonar.sources=.",
        "-Dsonar.host.url=host",
        "-Dsonar.login=token",
      ]
    }
  />
  <p
    className="big-spacer-top markdown"
  >
    <FormattedMessage
      defaultMessage="onboarding.analysis.sq_scanner.docs"
      id="onboarding.analysis.sq_scanner.docs"
      values={
        Object {
          "link": <a
            href="http://redirect.sonarsource.com/doc/install-configure-scanner.html"
            rel="noopener noreferrer"
            target="_blank"
          >
            onboarding.analysis.sq_scanner.docs_link
          </a>,
        }
      }
    />
  </p>
</div>
`;
